k8s/apps/crafty-controller/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crafty-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crafty-controller
  namespace: crafty-controller
  labels:
    app.kubernetes.io/name: crafty-controller
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: crafty-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: crafty-controller
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: crafty-controller
          image: registry.gitlab.com/crafty-controller/crafty-4:4.11.0@sha256:7b6e87514259549647e15ceeaf73d238792e6d77e2c79fc744d5badc8d6e997c
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: backups
              mountPath: /crafty/backups
            - name: logs
              mountPath: /crafty/logs
            - name: servers
              mountPath: /crafty/servers
            - name: config
              mountPath: /crafty/app/config
            - name: import
              mountPath: /crafty/import
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "10Gi"
      volumes:
        - name: backups
          persistentVolumeClaim:
            claimName: crafty-controller-backups
        - name: logs
          persistentVolumeClaim:
            claimName: crafty-controller-logs
        - name: servers
          persistentVolumeClaim:
            claimName: crafty-controller-servers
        - name: config
          persistentVolumeClaim:
            claimName: crafty-controller-config
        - name: import
          persistentVolumeClaim:
            claimName: crafty-controller-import
---
apiVersion: v1
kind: Service
metadata:
  name: crafty-controller
  namespace: crafty-controller
  annotations:
    gatus.home-operations.com/endpoint: |
      alerts:
        - type: pushover
spec:
  selector:
    app.kubernetes.io/name: crafty-controller
  ports:
    - name: https
      port: 8443
      targetPort: 8443
      protocol: TCP
