k8s/apps/crafty-controller/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: crafty-controller
  namespace: crafty-controller
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Crafty Controller"
    gethomepage.dev/description: "Minecraft server manager"
    gethomepage.dev/group: "tools"
    gethomepage.dev/icon: "sh-crafty-controller.svg"
    gethomepage.dev/href: "https://crafty.item.fyi"
    gethomepage.dev/siteMonitor: "https://crafty-controller.crafty-controller.svc.cluster.local:8443"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=crafty-controller"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`crafty.item.fyi`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: crafty-controller
          port: 8443
          scheme: https
          serversTransport: crafty-skip-tls
  tls: {}
